--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -46,7 +47,7 @@
         <div>
           <!-- cards go here -->
           <div>
-            <img src="" alt="">
+            <img src="img/stew.jpg" alt="stew">
             <div>
               <span>5 Bean Chilli Stew</span>
               <span>Recipe by Mario</span>
